change main to index

--- a/drill.html
+++ b/drill.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="content">
-        <a href="main.html">בית</a>
+        <a href="index.html">בית</a>
         <a href="screwdriver.html">מברגות</a>
         <a href="drill.html">מקדחות ופטישונים </a>
     </div>
