--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<div>
 		<div class="content">
-			<a href="main.html">בית</a>&nbsp
+			<a href="index.html">בית</a>&nbsp
 			<a href="screwdriver.html">מברגות</a>&nbsp
 			<a href="drill.html">מקדחות ופטישונים</a>
 			
