--- a/makita.html
+++ b/makita.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <div class="content">
-            <a href="main.html">בית</a>&nbsp
+            <a href="index.html">בית</a>&nbsp
             <a href="screwdriver.html">מברגות</a>&nbsp
             <a href="drill.html">מקדחות ופטישונים</a>
 
